Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjNumObjField.quorum
class Main
    Number v
    v:SetValue(5.0)
    action Main
        Test(v)
    end

    action Test(Text var)
    end
end
